--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <div style="font-size: 13px;">
     <p style="font-size:20px">证书信息</p >
-    <img src="./11.png" alt="">
+    <img src="./WechatIMG567.png" alt="">
     <p>姓名：乔荣存</p >
     <p>性别：女</p >
     <p>出生年月：1969-02-08</p >
