--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
       width: 100px;
       height: 130px;
     }
+    p {line-height:25px}
   </style>
 </head>
 <body>
-  <div style="font-size: 14px;line-height:16px;">
+  <div style="font-size: 14px;">
     <p style="font-size:20px">证书信息</p >
     <img src="./WechatIMG567.png" alt="">
     <p>姓名：乔荣存</p >
