--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
     }
     div {
       padding: 0 20px;
+      color:#444444;
     }
     img {
       width: 100px;
       height: 130px;
     }
-    p {line-height:25px}
+    p {line-height:16px;}
   </style>
 </head>
 <body>
   <div style="font-size: 14px;">
-    <p style="font-size:20px">证书信息</p >
+    <p style="font-size:24px">证书信息</p >
     <img src="./WechatIMG567.png" alt="">
     <p>姓名：乔荣存</p >
     <p>性别：女</p >
