--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p>出生年月：1969-02-08</p >
     <p>身份证号：412924196902085089</p >
     <p>工种:建筑起重机械司机</p >
-    <p>操作类别:施升降机</p >
+    <p>操作类别:施工升降机</p >
     <p>证书编号：鄂L052021003505</p >
     <p>初次取证日期:2021-04-01</p >
     <p>证书有效期:2021-04-01 至 2023-04-01</p >
